03.business-os/AICompanyManager/900.meta/move_operation_buttons_bottom_20260430_220905/030_verify.txt
[PASS] index.html exists
[PASS] server file exists
[PASS] clean core exists
INDEX_HASH_BEFORE=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_BEFORE=ef80fdbf4e4c56fd698ae139d5e34160321b8dce77f7b98fe6f3c5eb0a14fc34
CORE_HASH_BEFORE=0b87436e515964efac1f4a914d54d6da6b6f2e5088fd78e087780080d6b9eda2
[PASS] clean core backup created
PATCH_CODE=0
[PASS] operation button bottom patch executed
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:1644
      '<section class="aicm-core-card aicm-operation-card">',
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected string
    at wrapSafe (node:internal/modules/cjs/loader:1743:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.14.1
CORE_NODE_CHECK_CODE=1
[FAIL] clean core node --check failed
SERVER_NODE_CHECK_CODE=0
[PASS] server node --check OK
MARKER_COUNT=3
CANDIDATE_COUNT=3
MOVED_COUNT=3
BOTTOM_OK_COUNT=3
INVALID_COUNT=0
RECOMMENDED_ONLY_MARKER_COUNT=1
ROLE_SETTING_OPEN_COUNT=0
WORKER_MULTI_COUNT=1
WORKER_ADD_ACTION_COUNT=2
CONFIRM_MARKER_COUNT=1
DIRECT_COMPANY_POST_COUNT=0
DIRECT_DEPARTMENT_POST_COUNT=0
DIRECT_SECTION_POST_COUNT=0
[PASS] operation bottom marker exists
[PASS] target screen candidates detected
[PASS] operation button rows moved
[PASS] moved operation buttons are after role settings
[PASS] no invalid button placement detected
[PASS] recommended-only robot combo marker remains
[PASS] role-setting-open remains absent
[PASS] worker multiple setting remains
[PASS] worker add row action remains
[PASS] DB write confirmation marker remains
[PASS] company save still does not POST directly
[PASS] department save still does not POST directly
[PASS] section save still does not POST directly
FORBIDDEN_CORE_COUNT=0
INDEX_SCRIPT_COUNT=1
ISOLATED_ASYNC_COUNT=0
[PASS] core forbidden marker count OK
[PASS] production index still loads one script
[PASS] isolated async remains absent
[PASS] no old local UI server detected
SERVER_PID=9748
[PASS] production server restart attempted
CONTEXT_CURL_CODE=0
CONTEXT_HTTP_CODE=200
[PASS] context HTTP 200
INDEX_CURL_CODE=0
INDEX_HTTP_CODE=200
[PASS] production index HTTP 200
INDEX_HASH_AFTER=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_AFTER=ef80fdbf4e4c56fd698ae139d5e34160321b8dce77f7b98fe6f3c5eb0a14fc34
CORE_HASH_AFTER=d1265793cb6b5a39bd2efdf3f24106a204ed38d7b93365e189dc7f994a55e2bb
[PASS] index.html unchanged
[PASS] server unchanged
[PASS] clean core changed as expected
